@@ -83,6 +83,20 @@
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
                     android:singleLine="true" />
+                
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="5dip"
+                    android:text="@string/api_password_label_str"
+                    android:textColor="#ffffff" />
+
+                <EditText
+                    android:id="@+id/api_password"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:singleLine="true" />
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
